# Sudoku-app

First GUI/: CMakeLists.txt  main
First GUI/imgui/: imgui.cpp
First GUI/src/: main.cpp
PythonSudoku/: PythonSudokuLogic.ipynb
Sudoku/: CMakeLists.txt  LICENSE  NOTES  SudokuApp
Sudoku/imgui/examples/example_android_opengl3/: main.cpp
Sudoku/src/: SudkoAI.cpp  SudkoAI.h  SudkoWidget.cpp  SudokuLogic.cpp  SudokuLogic.h  SudokuWidget.h  main.cpp
